fix `<code>`looking too small when used in a lead fix #10

--- a/src/assets/styles/_elements.text.css
+++ b/src/assets/styles/_elements.text.css
@@ -92,7 +92,7 @@ var {
 
 code,
 samp {
-    font-size: var(--font-size-reference);
+    font-size: var(--font-size-smaller);
 }
 
 :not(pre) > code {
